         ui/sdl/{sdldisplay.c,sdlkeyboard.c,sdlui.c},
         ui/svga/{svgadisplay.c,svgakeyboard.c,svgaui.c},
         ui/ui.h,ui/widget/widget.[ch],ui/wii/{wiikeyboard.c,wiiui.c},
         ui/xlib/{xdisplay.c,xerror.c,xkeyboard.c,xui.c}: move widget UI hooks
         to the UI code, remove unnecessary #ifdef WIDGET_UI (patch #2918210)
         (Gergely Szasz).
20091230 ui.c: include widget.h for widget_init and widget_end definitions (more
         from patch #2918210) (Gergely Szasz).
20100107 ui.c: supply dummy ui_widget_init and ui_widget_end definitions (more
         from patch #2918210) (Gergely Szasz).
20100107 Makefile.am,configure.in,sound.[c|cpp],
         sound/{Blip_Buffer.[cpp|h],Makefile.am,blipbuffer.[ch]}: convert
         Blip_Buffer to plain C (patch #2922796) (Gergely Szasz).
20100116 disk/{disk.[ch],fdd.[ch],upd_fdc.[ch]},machines/specplus3.[ch],
         man/fuse.1,periph.c,settings.dat,ui/options.dat: add weak data handling
         capability so Fuse can deal with weak data if it present in the disk
         image (EDSK/UDI) (patch #2927624) (Gergely Szasz).
20100215 ui/gtk/gtkkeyboard.c: account for group setting on key events to make
         intertional keyboards work based on key positions rather than default
         symbol (patch #2951275) (Michal Jurica).
20100302 ui/gtk/gtkui.c: implement drag and drop support (patch #2961519)
         (Dmitry Semyonov).
20100506 debugger/{command.c,debugger_internals.h},ula.c: fix gcc 4.4 warnings.
20100515 disk/upd_fdc.c: fix valgrind warning.
20100515 ChangeLog: update.
20100516 ui/ui.h: include widget.h if we are going to refer to widget_finish()
         (Fred)
20100516 ui/widget/menu.c: supply a format to avoid warnings (Fred)
20100516 debugger/commandl.l: have a second go at eliminating warnings when
         calling debugger_command_input() on platforms where yy_size_t isn't an
         int in a way that works for platforms where it is (Fred)