@@ -153,7 +153,7 @@ beta_init( void )
 
   for( i = 0; i < BETA_NUM_DRIVES; i++ ) {
     d = &beta_drives[ i ];
-    fdd_init( &d->fdd, FDD_SHUGART, 0, 0, 0 );	/* drive geometry 'autodetect' */
+    fdd_init( &d->fdd, FDD_SHUGART, NULL, 0 );	/* drive geometry 'autodetect' */
     d->disk.flag = DISK_FLAG_NONE;
   }
   beta_select_drive( 0 );
@@ -229,8 +229,7 @@ beta_reset( int hard_reset GCC_UNUSED )
 
   /* We can eject disks only if they are currently present */
   dt = &fdd_params[ option_enumerate_diskoptions_drive_beta128a_type() + 1 ];	/* +1 => there is no `Disabled' */
-  fdd_init( &beta_drives[ BETA_DRIVE_A ].fdd, FDD_SHUGART,
-	    dt->heads, dt->cylinders, 1 );
+  fdd_init( &beta_drives[ BETA_DRIVE_A ].fdd, FDD_SHUGART, dt, 1 );
   ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK_BETA_A, dt->enabled );
   ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK_BETA_A_EJECT,
 		    beta_drives[ BETA_DRIVE_A ].fdd.loaded );
@@ -241,8 +240,7 @@ beta_reset( int hard_reset GCC_UNUSED )
 
 
   dt = &fdd_params[ option_enumerate_diskoptions_drive_beta128b_type() ];
-  fdd_init( &beta_drives[ BETA_DRIVE_B ].fdd, dt->enabled ? FDD_SHUGART : FDD_TYPE_NONE,
-	    dt->heads, dt->cylinders, 1 );
+  fdd_init( &beta_drives[ BETA_DRIVE_B ].fdd, dt->enabled ? FDD_SHUGART : FDD_TYPE_NONE, dt, 1 );
   ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK_BETA_B, dt->enabled );
   ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK_BETA_B_FLIP_SET,
 		    !beta_drives[ BETA_DRIVE_B ].fdd.upsidedown );
@@ -253,8 +251,7 @@ beta_reset( int hard_reset GCC_UNUSED )
 
 
   dt = &fdd_params[ option_enumerate_diskoptions_drive_beta128c_type() ];
-  fdd_init( &beta_drives[ BETA_DRIVE_C ].fdd, dt->enabled ? FDD_SHUGART : FDD_TYPE_NONE,
-	    dt->heads, dt->cylinders, 1 );
+  fdd_init( &beta_drives[ BETA_DRIVE_C ].fdd, dt->enabled ? FDD_SHUGART : FDD_TYPE_NONE, dt, 1 );
   ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK_BETA_C, dt->enabled );
   ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK_BETA_C_FLIP_SET,
 		    !beta_drives[ BETA_DRIVE_C ].fdd.upsidedown );
@@ -265,8 +262,7 @@ beta_reset( int hard_reset GCC_UNUSED )
 
 
   dt = &fdd_params[ option_enumerate_diskoptions_drive_beta128d_type() ];
-  fdd_init( &beta_drives[ BETA_DRIVE_D ].fdd, dt->enabled ? FDD_SHUGART : FDD_TYPE_NONE,
-	    dt->heads, dt->cylinders, 1 );
+  fdd_init( &beta_drives[ BETA_DRIVE_D ].fdd, dt->enabled ? FDD_SHUGART : FDD_TYPE_NONE, dt, 1 );
   ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK_BETA_D, dt->enabled );
   ui_menu_activate( UI_MENU_ITEM_MEDIA_DISK_BETA_D_FLIP_SET,
 		    !beta_drives[ BETA_DRIVE_D ].fdd.upsidedown );
